
0.2604

 - module_name() will now return '' instead of undef when module_name
   is not set.  This eliminates a couple uninitialized-value
   warnings. [Suggested by Michael Schwern]

 - The expand_test_dir() method will now skip dotfiles (like ._foo.t,
   which sometimes gets automatically created on Mac systems) when
   'recursive_test_files' is in effect. [Tom Insam]

0.2603 (Bug fix for 0.26)   Mon Nov 15 10:28:00 CST 2004

 - Added documentation for the new_from_context() method.

 - Completely rewrote the split_like_shell() method for the Windows
   platform so it works like the command.com shell. [Randy Sims]

0.2602 (Bug fix for 0.26)   Thu Nov  4 11:19:29 CST 2004

 - The two bug fixes in 0.2601 gnashed against each other incorrectly,
   resulting in a Win32 bug in split_like_shell().  Fixed.  [Spotted
   by Steve Hay & Randy Sims]

 - Removed a couple of 'use warnings' statements from the code - they
   were causing compile failures on 5.005_04, where warnings.pm isn't
   available. [Blair Zajac]

0.2601 (Bug fix for 0.26)   Wed Nov  3 20:09:27 CST 2004

 - Fixed some backslash problems with split_like_shell() on
   Win32. [Steve Hay]

 - Fixed a bug in split_like_shell() in which leading whitespace was
   creating an empty word, manifesting as something like "gcc - no
   such file or directory" during tests. [Spotted by Warren L. Dodge]

0.26 Sat Oct  9 17:51:01 CDT 2004

 - Removed some language from the Module::Build::Compat documentation
   that encouraged people to include a Build.PL without a Makefile.PL.
   Also changed "a replacement for MakeMaker" to "an alternative to
   MakeMaker" in the main documentation, which is basically what I
   meant all along (i.e. a replacement for MakeMaker in your
   particular build process - MakeMaker is never going to be fully
   replaced in the perl world at large, of course), but some people
   got the impression I was a little more truculent toward MakeMaker
   than I really am.
